syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

// Go package path for generated code
option go_package = "github.com/pingxin/cuckoo/api/v1/todopb";

// Java package configuration
option java_package = "com.myorg.api.v1";
option java_multiple_files = true;
option java_outer_classname = "TodoProto";

// TodoService 提供 TODO 任务管理功能
//
// 该服务支持完整的 CRUD 操作，允许用户创建、查询、更新和删除 TODO 任务。
// 所有任务都有唯一的 ID，并记录创建和更新时间。
service TodoService {
  // CreateTodo 创建新的 TODO 任务
  //
  // 创建一个新的 TODO 项并返回包含生成的唯一 ID 和时间戳的完整对象。
  // 标题字段是必需的，不能为空。
  //
  // Example:
  //   Request: { title: "Buy groceries", description: "Milk, eggs, bread" }
  //   Response: { todo: { id: "uuid", title: "Buy groceries", ... } }
  //
  // Errors:
  //   - INVALID_ARGUMENT: 如果标题为空或仅包含空格
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
  
  // ListTodos 获取所有 TODO 任务
  //
  // 返回系统中所有 TODO 任务的列表。任务按创建时间排序（最新的在前）。
  //
  // Example:
  //   Request: {}
  //   Response: { todos: [{ id: "1", title: "Task 1" }, ...] }
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
  
  // UpdateTodo 更新现有的 TODO 任务
  //
  // 更新指定 ID 的 TODO 任务。可以更新标题、描述和完成状态。
  // 更新操作会自动更新 updated_at 时间戳。
  //
  // Example:
  //   Request: { id: "uuid", title: "Updated title", completed: true }
  //   Response: { todo: { id: "uuid", title: "Updated title", completed: true, ... } }
  //
  // Errors:
  //   - NOT_FOUND: 如果指定的 TODO 不存在
  //   - INVALID_ARGUMENT: 如果 ID 为空或标题为空
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
  
  // DeleteTodo 删除指定的 TODO 任务
  //
  // 根据 ID 删除 TODO 任务。删除操作是幂等的，重复删除同一个 ID 不会报错。
  //
  // Example:
  //   Request: { id: "uuid" }
  //   Response: { success: true }
  //
  // Errors:
  //   - NOT_FOUND: 如果指定的 TODO 不存在
  //   - INVALID_ARGUMENT: 如果 ID 为空
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}

// Todo 表示一个 TODO 任务项
//
// 每个 TODO 任务都有唯一的 ID，包含标题、描述、完成状态和时间戳。
message Todo {
  // id 是 TODO 任务的唯一标识符
  //
  // 由服务器在创建时自动生成（UUID 格式）。
  // 客户端不应该设置此字段。
  string id = 1;
  
  // title 是 TODO 任务的标题
  //
  // 必填字段，不能为空或仅包含空格。
  // 建议长度不超过 200 个字符。
  string title = 2;
  
  // description 是 TODO 任务的详细描述
  //
  // 可选字段，可以包含任务的详细信息。
  // 建议长度不超过 1000 个字符。
  string description = 3;
  
  // completed 表示任务是否已完成
  //
  // 默认值为 false（未完成）。
  bool completed = 4;
  
  // created_at 是任务的创建时间
  //
  // 由服务器在创建时自动设置，客户端不应修改。
  google.protobuf.Timestamp created_at = 5;
  
  // updated_at 是任务的最后更新时间
  //
  // 由服务器在创建和每次更新时自动设置，客户端不应修改。
  google.protobuf.Timestamp updated_at = 6;
}

// CreateTodoRequest 包含创建 TODO 任务的参数
message CreateTodoRequest {
  // title 是新 TODO 任务的标题（必填）
  string title = 1;
  
  // description 是新 TODO 任务的描述（可选）
  string description = 2;
}

// CreateTodoResponse 包含创建的 TODO 任务
message CreateTodoResponse {
  // todo 是新创建的 TODO 任务，包含生成的 ID 和时间戳
  Todo todo = 1;
}

// ListTodosRequest 包含查询 TODO 列表的参数
//
// 当前版本不支持分页，返回所有任务。
// 未来版本可能添加分页参数（page_size, page_token）。
message ListTodosRequest {
  // 预留字段用于未来扩展（如分页、过滤、排序）
}

// ListTodosResponse 包含 TODO 任务列表
message ListTodosResponse {
  // todos 是所有 TODO 任务的列表
  //
  // 任务按创建时间降序排列（最新的在前）。
  repeated Todo todos = 1;
}

// UpdateTodoRequest 包含更新 TODO 任务的参数
message UpdateTodoRequest {
  // id 是要更新的 TODO 任务的唯一标识符（必填）
  string id = 1;
  
  // title 是更新后的标题（必填）
  string title = 2;
  
  // description 是更新后的描述（可选）
  string description = 3;
  
  // completed 是更新后的完成状态
  bool completed = 4;
}

// UpdateTodoResponse 包含更新后的 TODO 任务
message UpdateTodoResponse {
  // todo 是更新后的 TODO 任务，包含新的 updated_at 时间戳
  Todo todo = 1;
}

// DeleteTodoRequest 包含删除 TODO 任务的参数
message DeleteTodoRequest {
  // id 是要删除的 TODO 任务的唯一标识符（必填）
  string id = 1;
}

// DeleteTodoResponse 包含删除操作的结果
message DeleteTodoResponse {
  // success 表示删除操作是否成功
  //
  // 通常为 true。如果 TODO 不存在，会返回 NOT_FOUND 错误而不是此响应。
  bool success = 1;
}
